@@ -2,7 +2,7 @@
     <parent>
         <groupId>io.antmedia</groupId>
         <artifactId>parent</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
+        <version>2.9.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ant-media-server</artifactId>
@@ -146,6 +146,9 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+						<verbose>false</verbose>
+				</configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
@@ -191,14 +194,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>@{argLine} --illegal-access=permit -Xmx750M -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -Djava.library.path=${project.basedir}/src/main/server/lib/native-linux-x86_64</argLine>
+                    <argLine>@{argLine} -Xmx3000M -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -Djava.library.path=${project.basedir}/src/main/server/lib/native-linux-x86_64</argLine>
                 	<skipAfterFailureCount>1</skipAfterFailureCount>
                 </configuration>
             </plugin>
              <plugin>
 			    <groupId>org.jacoco</groupId>
 			    <artifactId>jacoco-maven-plugin</artifactId>
-			    <version>0.8.5</version>
+			    <version>${jacoco-maven-plugin.version}</version>
 			    <executions>
 			        <execution>
 			            <goals>
@@ -214,38 +217,7 @@
 			        </execution>
 			    </executions>
 			</plugin>      
-            <plugin>
-                <groupId>com.github.kongchen</groupId>
-                <artifactId>swagger-maven-plugin</artifactId>
-                <version>3.1.8</version>
-                <configuration>
-                    <apiSources>
-                        <apiSource>
-                            <springmvc>false</springmvc>
-                            <locations>
-                             	<location>io.antmedia.rest</location> 
-                            	<location>io.antmedia.console.rest</location>
-                            </locations>
-                            <swaggerDirectory>target/swagger</swaggerDirectory>
-                            <swaggerFileName>swagger</swaggerFileName>
-                            <outputFormats>json</outputFormats>
-                            <info>
-                   				 <title>Ant Media Server REST API Reference</title>
-                   				 <version>${project.parent.version}</version>
-                   			</info>
-                   			<host>test.antmedia.io:5443/Sandbox/rest/</host>
-                        </apiSource>
-                    </apiSources>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+          
             <plugin>
               <groupId>org.owasp</groupId>
               <artifactId>dependency-check-maven</artifactId>
@@ -263,12 +235,6 @@
                 </execution>
               </executions>
             </plugin>
-
-            <!-- >>>>>>> master <plugin> <groupId>com.webcohesion.enunciate</groupId>
-                <artifactId>enunciate-maven-plugin</artifactId> <version>${enunciate.version}</version>
-                <executions> <execution> <goals> <goal>docs</goal> </goals> <configuration>
-                <configFile>enunciate.xml</configFile> <docsDir>${project.build.directory}</docsDir>
-                </configuration> </execution> </executions> </plugin> -->
         </plugins>
          </pluginManagement>
     </build>
@@ -276,13 +242,13 @@
         <dependency>
             <groupId>io.antmedia.ipcamera.onvif</groupId>
             <artifactId>ONVIF</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.2.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
 		    <groupId>org.mitre.dsmiley.httpproxy</groupId>
 		    <artifactId>smiley-http-proxy-servlet</artifactId>
-		    <version>1.12.1</version>
+		    <version>${smiley-http-proxy-servlet.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
@@ -307,26 +273,6 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jul-to-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-access</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
@@ -348,8 +294,6 @@
             <version>${protobuf-java.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- <dependency> <groupId>uk.org.lidalia</groupId> <artifactId>sysout-over-slf4j</artifactId>
-            <version>1.0.2</version> </dependency> -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -383,13 +327,6 @@
             <version>${selenium-java.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- as far as I understand selenium-java and selenium-http-jdk-client need to have same version -->
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-http-jdk-client</artifactId>
-            <version>${selenium-java.version}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
@@ -407,7 +344,7 @@
 			<version>${commons-beanutils.version}</version>
 		</dependency>
 		<dependency>
-			<artifactId>bcprov-jdk15on</artifactId>
+			<artifactId>bcprov-jdk18on</artifactId>
 			<groupId>org.bouncycastle</groupId>
 			<version>${bc.version}</version>
 		</dependency>
@@ -417,16 +354,10 @@
 		    <version>${morphia.version}</version>
 		</dependency>
 		<dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-jersey2-jaxrs</artifactId>
-            <version>1.6.11</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>jersey-container-servlet-core</artifactId>
-                    <groupId>org.glassfish.jersey.containers</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+      		<groupId>io.swagger.core.v3</groupId>
+	      	<artifactId>swagger-jaxrs2-jakarta</artifactId>
+	      	<version>${swagger-jaxrs2-jakarta.version}</version>
+	   	</dependency>
         <dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-dropwizard-metrics</artifactId>
@@ -452,6 +383,18 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>${commons-io}</version>
 		</dependency>
+        <!-- we just override the version of ehcache because of the vulnerability. It's dependency of red5-io -->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <version>2.10.9.2</version>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+	   <!-- we just override the version of tika because of the vulnerability. It's dependency of red5-io -->
+	    <dependency>
+	        <groupId>org.apache.tika</groupId>
+	        <artifactId>tika-core</artifactId>
+	        <version>2.9.1</version>
+	    </dependency>
         <dependency>
             <groupId>org.red5</groupId>
             <artifactId>red5-io</artifactId>
@@ -550,7 +493,7 @@
         <dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.9</version>
+			<version>${gson.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
@@ -582,8 +525,8 @@
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.ext</groupId>
-            <artifactId>jersey-spring5</artifactId>
-            <version>2.35</version>
+            <artifactId>jersey-spring6</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
@@ -603,23 +546,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>2.0.9</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito2</artifactId>
-            <version>2.0.9</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-api</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
             <version>${awaitility.version}</version>
@@ -628,13 +554,11 @@
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-server</artifactId>
-            <version>2.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-container-grizzly-server</artifactId>
-            <version>2.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -655,21 +579,34 @@
         <dependency>
   			<groupId>com.auth0</groupId>
   			<artifactId>jwks-rsa</artifactId>
-  			<version>0.20.2</version>
+  			<version>${jwks-rsa.version}</version>
 		</dependency>
 		<dependency>
   			<groupId>com.auth0</groupId>
   			<artifactId>java-jwt</artifactId>
-  			<version>3.18.3</version>
+  			<version>${java-jwt.version}</version>
 		</dependency>		
-
 		<dependency>
 		   <groupId>org.redisson</groupId>
 		   <artifactId>redisson</artifactId>
 		   <version>${redisson.version}</version>
 		   <scope>provided</scope>
 		</dependency>  
-
+		<dependency>
+		  <groupId>com.google.firebase</groupId>
+		  <artifactId>firebase-admin</artifactId>
+		  <version>${firebase.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.eatthepath</groupId>
+		    <artifactId>pushy</artifactId>
+		    <version>${pushy.version}</version>
+		</dependency>
+        <dependency>
+            <groupId>io.lindstrom</groupId>
+            <artifactId>m3u8-parser</artifactId>
+            <version>0.27</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
@@ -716,7 +653,6 @@
                                 <configuration>
                                     <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                     <includeScope>compile</includeScope>
-                                    <excludeScope>test</excludeScope>
                                     <excludeGroupIds>org.tensorflow,</excludeGroupIds>
                                     <excludeArtifactIds>cuda,cuda-platform</excludeArtifactIds>
                                     <excludeTransitive>false</excludeTransitive>
@@ -773,6 +709,33 @@
 							    <executable>mkdir</executable>
 									<arguments>
 										<argument>target/webapps</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+							    <id>create-live-app</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+							    <executable>src/main/server/create_app.sh</executable>
+									<arguments>
+										<argument>live</argument>
+										<argument>${project.build.directory}</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+							    <id>show-enterprise-feature-message-live-app</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+							    <executable>src/main/assembly/show_enterprise_feature_message.sh</executable>
+									<arguments>
+										<argument>${project.build.directory}/webapps/live</argument>
 									</arguments>
 								</configuration>
 							</execution>
@@ -885,6 +848,11 @@
 		           	<version>${javacpp.srt.version}</version>
 		            <scope>provided</scope>
         		</dependency>
+                <dependency>
+                    <groupId>com.google.cloud</groupId>
+                    <artifactId>google-cloud-storage</artifactId>
+                    <version>2.37.0</version>
+                </dependency>
             </dependencies>
             <build>
                 <plugins>
@@ -901,7 +869,6 @@
                                 <configuration>
                                     <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                     <includeScope>compile</includeScope>
-                                    <excludeScope>test</excludeScope>
                                     <excludeTransitive>false</excludeTransitive>
                                 </configuration>
                             </execution>
@@ -981,6 +948,20 @@
 							    <executable>mkdir</executable>
 									<arguments>
 										<argument>target/webapps</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+							    <id>create-live-app</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+							    <executable>src/main/server/create_app.sh</executable>
+									<arguments>
+										<argument>live</argument>
+										<argument>${project.build.directory}</argument>
 									</arguments>
 								</configuration>
 							</execution>
